# scrappeur_wikipedia_en_rust

./: .gitignore  Cargo.toml  README.md  wikipedia_data.json
src/: main.rs
wikipedia_scraper/: all.html  fn.extract_header.html  fn.extract_summary.html  fn.extract_urls_from_opensearch.html  fn.generate_markdown.html  fn.generate_search_summary.html  fn.get_urls_interactif.html  fn.http_get.html  fn.https_get.html  fn.main.html  fn.parse_url.html  fn.rechercher_wikipedia.html  fn.save_page_data.html  fn.scrape_wikipedia.html  fn.url_encode.html  index.html  sidebar-items.js  struct.Args.html  struct.WikipediaPage.html
