[package]
name = "wikipedia_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
scraper = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
rustls = "0.22"
webpki-roots = "0.26"
chrono = "0.4"
sanitize-filename = "0.5"
